--- a/internals/applications/istio.yaml
+++ b/internals/applications/istio.yaml
@@ -47,7 +47,7 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: istio-ingress-gateway
+  name: ingress-gateway
   namespace: argocd
 spec:
   project: default
@@ -56,7 +56,7 @@ spec:
     repoURL: https://istio-release.storage.googleapis.com/charts
     targetRevision: 1.20.2
     helm:
-      releaseName: istio-internal-ingress
+      releaseName: ingress-gateway
       values: |
         autoscaling:
           enabled: false
