--- a/external-secrets-configs/cert-manager.yaml
+++ b/external-secrets-configs/cert-manager.yaml
@@ -2,7 +2,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: cloudfare-api-token
+  name: cloudflare-api-token
   namespace: cert-manager
 spec:
   secretStoreRef:
