--- a/internals/applications/cert-manager.yaml
+++ b/internals/applications/cert-manager.yaml
@@ -13,6 +13,9 @@ spec:
       releaseName: cert-manager
       values: |
         installCRDs: true
+        extraArgs:
+          - --dns01-recursive-nameservers-only
+          - --dns01-recursive-nameservers=1.1.1.1:53,1.0.0.1:53
   destination:
     server: https://kubernetes.default.svc
     namespace: cert-manager
