--- a/internals/applications/linkerd.yaml
+++ b/internals/applications/linkerd.yaml
@@ -2,6 +2,24 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
+  name: linkerd-bootstrap
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/ingtranet/argocd-manifests.git
+    path: linkerd-bootstrap
+    targetRevision: HEAD
+    directory:
+      recurse: true
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: linkerd
+
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
   name: linkerd-crds
   namespace: argocd
 spec:
