--- a/external-secrets-configs/linkerd.yaml
+++ b/external-secrets-configs/linkerd.yaml
@@ -3,6 +3,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: linkerd-trust-anchor
+  namespace: linkerd
 spec:
   secretStoreRef:
     name: vault
