--- a/internals/applications/traefik.yaml
+++ b/internals/applications/traefik.yaml
@@ -11,7 +11,7 @@ spec:
     targetRevision: 26.0.0
     helm:
       releaseName: traefik
-      valuesObject:
+      values: |
         deployment:
           replicas: 2
         experimental:
