add ingress route

--- a/internals/applications/traefik.yaml
+++ b/internals/applications/traefik.yaml
@@ -24,3 +24,21 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: traefik
+
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: traefik-configs
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/ingtranet/argocd-manifests.git
+    path: traefik-configs
+    targetRevision: HEAD
+    directory:
+      recurse: true
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: traefik
