change backend service

--- a/traefik-configs/http-to-https.yaml
+++ b/traefik-configs/http-to-https.yaml
@@ -19,3 +19,8 @@ spec:
       match: PathPrefix(`/`)
       middlewares:
         - name: https-redirect-scheme
+      services:
+        - kind: Service
+          name: traefik
+          namespace: traefik
+          port: 443
