--- a/ollama/deployment.yaml
+++ b/ollama/deployment.yaml
@@ -32,4 +32,16 @@ spec:
             limits:
               cpu: "2"
               memory: "4Gi"
-
+        - name: ollama-init
+          image: ollama/ollama:0.1.20
+          command: ["/bin/bash"]
+          args:
+            - -c
+            - |
+              set -ex
+              sleep 10
+              ollama pull phi
+          resources:
+            limits:
+              cpu: 100m
+              memory: "128Mi"
