--- a/internals/applications/code-server.yaml
+++ b/internals/applications/code-server.yaml
@@ -15,6 +15,8 @@ spec:
       values: |
         persistence:
           enabled: false
+        nodeSelector:
+          kubernetes.io/hostname: k8s-ga-gpu-1
   destination:
     server: https://kubernetes.default.svc
     namespace: code-server
