--- a/internals/applications/code-server.yaml
+++ b/internals/applications/code-server.yaml
@@ -17,7 +17,7 @@ spec:
           enabled: false
         nodeSelector:
           kubernetes.io/hostname: k8s-ga-gpu-1
-        existingSecret: true
+        existingSecret: code-server
         extraVars:
           - name: NVIDIA_VISIBLE_DEVICES
             value: "all"
