--- a/internals/applications/grafana-agent.yaml
+++ b/internals/applications/grafana-agent.yaml
@@ -15,7 +15,7 @@ spec:
         agent:
           configMap:
             content: |
-              prometheus.remote_write "victoria-metrics" {
+              prometheus.remote_write "victoria_metrics" {
                 endpoint {
                   url = "http://victoria-metrics.sd.ingtra.net:8428/api/v1/write"
                 }
@@ -26,7 +26,7 @@ spec:
               }
               prometheus.scrape "nodes" {
                 targets    = discovery.kubernetes.nodes.targets
-                forward_to = [prometheus.remote_write.victoria-metrics.receiver]
+                forward_to = [prometheus.remote_write.victoria_metrics.receiver]
               }
 
               discovery.kubernetes "pods" {
@@ -34,7 +34,7 @@ spec:
               }
               prometheus.scrape "pods" {
                 targets    = discovery.kubernetes.pods.targets
-                forward_to = [prometheus.remote_write.victoria-metrics.receiver]
+                forward_to = [prometheus.remote_write.victoria_metrics.receiver]
               }
           
               prometheus.scrape "externals" {
@@ -44,7 +44,7 @@ spec:
                     __metrics_path__ = "/metrics"
                   }
                 ]
-                forward_to = [prometheus.remote_write.victoria-metrics.receiver]
+                forward_to = [prometheus.remote_write.victoria_metrics.receiver]
               }
           clustering:
             enabled: true
