--- a/misc/victoria-metrics-svc.yaml
+++ b/misc/victoria-metrics-svc.yaml
@@ -42,7 +42,7 @@ spec:
           resources:
             requests:
               cpu: 100m
-              memory: 100Mi"
+              memory: 100Mi
             limits:
               cpu: 500m
               memory: 500Mi
