--- a/misc/victoria-metrics-svc.yaml
+++ b/misc/victoria-metrics-svc.yaml
@@ -34,6 +34,7 @@ spec:
           ports:
             - containerPort: 8080
           args:
+            - caddy
             - reverse-proxy
             - --from
             - :8080
