--- a/internals/applications/linkerd.yaml
+++ b/internals/applications/linkerd.yaml
@@ -134,9 +134,11 @@ spec:
         clusterDomain: kg.ingtra.net
         defaultRegistry: ghcr.io/linkerd
         enablePodAntiAffinity: true
-        prometheusUrl: http://victoria-metrics.sd.ingtra.net:8428
+        prometheusUrl: victoria-metrics.sd.ingtra.net:8428
         prometheus:
           enabled: false
   destination:
     server: https://kubernetes.default.svc
     namespace: linkerd
+
+
