--- a/internals/applications/grafana-agent.yaml
+++ b/internals/applications/grafana-agent.yaml
@@ -37,6 +37,43 @@ spec:
                 }
               }
 
+
+              discovery.relabel "linkerd_controller" {
+                targets = discovery.kubernetes.pod.targets
+                rule {
+                  source_labels = ["__meta_kubernetes_namespace"]
+                  action = "keep"
+                  regex = "linkerd"
+                }
+                rule {
+                  source_labels = ["__meta_kubernetes_pod_container_port_name"]
+                  action = "keep"
+                  regex = "admin-http"
+                }
+                rule {
+                  source_labels = ["__meta_kubernetes_pod_container_name"]
+                  action = "replace"
+                  target_label = "component"
+                }
+              }
+
+              discovery.relabel "linkerd_service_mirror" {
+                targets = discovery.kubernetes.pod.targets
+                rule {
+                  source_labels = [
+                    "__meta_kubernetes_pod_label_component",
+                    "__meta_kubernetes_pod_container_port_name",
+                  ]
+                  action = "keep"
+                  regex = "linkerd-service-mirror;admin-http$"
+                }
+                rule {
+                  source_labels = ["__meta_kubernetes_pod_container_name"]
+                  action = "replace"
+                  target_label = "component"
+                }
+              }
+
               discovery.relabel "linkerd_proxy" {
                 targets = discovery.kubernetes.pod.targets
                 rule {
@@ -136,6 +173,26 @@ spec:
                 scrape_interval = "15s"
                 scrape_timeout  = "14s"
                 targets    = discovery.relabel.linkerd_proxy.output
+                forward_to = [prometheus.remote_write.victoria_metrics.receiver]
+              }
+
+              prometheus.scrape "linkerd_controller" {
+                clustering {
+                  enabled = true
+                }
+                scrape_interval = "15s"
+                scrape_timeout  = "14s"
+                targets    = discovery.relabel.linkerd_controller.output
+                forward_to = [prometheus.remote_write.victoria_metrics.receiver]
+              }
+
+              prometheus.scrape "linkerd_service_mirror" {
+                clustering {
+                  enabled = true
+                }
+                scrape_interval = "15s"
+                scrape_timeout  = "14s"
+                targets    = discovery.relabel.linkerd_service_mirror.output
                 forward_to = [prometheus.remote_write.victoria_metrics.receiver]
               }
           
