--- a/internals/applications/external-secrets.yaml
+++ b/internals/applications/external-secrets.yaml
@@ -14,3 +14,21 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: external-secrets
+
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: external-secrets-configs
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/ingtranet/argocd-manifests.git
+    path: external-secrets-configs
+    targetRevision: HEAD
+    directory:
+      recurse: true
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: external-secrets
