--- a/internals/applications/grafana-agent.yaml
+++ b/internals/applications/grafana-agent.yaml
@@ -215,13 +215,14 @@ spec:
           enableReporting: false
           resources:
             limits:
-              cpu: 2000m
-              memory: 2Gi
+              cpu: 1000m
+              memory: 1Gi
             requests:
               cpu: 100m
               memory: 100Mi
         controller:
           type: deployment
+          replicas: 2
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
