load mlflow executable

--- a/mlflow/deployment.yaml
+++ b/mlflow/deployment.yaml
@@ -18,6 +18,7 @@ spec:
         - name: mlflow
           image: ghcr.io/mlflow/mlflow:v2.9.2
           args:
+            - mlflow
             - server
             - --artifacts-destination
             - s3://mlflow
