--- a/mlflow/deployment.yaml
+++ b/mlflow/deployment.yaml
@@ -20,6 +20,10 @@ spec:
           args:
             - mlflow
             - server
+            - --host
+            - "0.0.0.0"
+            - --port
+            - "8080"
             - --artifacts-destination
             - s3://mlflow
           env:
