use ingtranet mlflow

--- a/mlflow/deployment.yaml
+++ b/mlflow/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: mlflow
-          image: ghcr.io/mlflow/mlflow:v2.9.2
+          image: ingtranet/mlflow:v2.9.2
           args:
             - mlflow
             - server
