--- a/internals/applications/seldon.yaml
+++ b/internals/applications/seldon.yaml
@@ -15,6 +15,9 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: seldon-system
+  syncPolicy:
+    syncOptions:
+      - Replace=true
 
 ---
 apiVersion: argoproj.io/v1alpha1
