--- a/internals/applications/seldon.yaml
+++ b/internals/applications/seldon.yaml
@@ -18,6 +18,14 @@ spec:
   syncPolicy:
     syncOptions:
       - Replace=true
+  ignoreDifferences:
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      name: seldondeployments.machinelearning.seldon.io
+      jsonPointers:
+        - /spec
+        - /status
+        - /metadata/labels
 
 ---
 apiVersion: argoproj.io/v1alpha1
