--- a/internals/applications/seldon.yaml
+++ b/internals/applications/seldon.yaml
@@ -26,14 +26,6 @@ spec:
   syncPolicy:
     syncOptions:
       - Replace=true
-  ignoreDifferences:
-    - group: apiextensions.k8s.io
-      kind: CustomResourceDefinition
-      name: seldondeployments.machinelearning.seldon.io
-      jsonPointers:
-        - /spec
-        - /status
-        - /metadata/labels
 
 ---
 apiVersion: argoproj.io/v1alpha1
@@ -51,4 +43,4 @@ spec:
       recurse: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: seldon-system
+    namespace: seldon
