--- a/internals/applications/seldon.yaml
+++ b/internals/applications/seldon.yaml
@@ -33,7 +33,7 @@ spec:
       releaseName: seldon-core-v2
       values: |
         opentelemetry:
-          disable: false
+          disable: true
         kafka:
           bootstrap: redpanda.sd.ingtra.net:9092
           topicPrefix: svc.seldon.
