--- a/csi-driver-nfs-configs/storageclass.yaml
+++ b/csi-driver-nfs-configs/storageclass.yaml
@@ -7,6 +7,7 @@ provisioner: nfs.csi.k8s.io
 parameters:
   server: synology.dv.ingtra.net
   share: /volume1/k8s-csi-nfs
+  subDir: ga
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 mountOptions:
