--- a/csi-driver-nfs-configs/storageclass.yaml
+++ b/csi-driver-nfs-configs/storageclass.yaml
@@ -8,7 +8,7 @@ metadata:
 provisioner: nfs.csi.k8s.io
 parameters:
   server: synology.dv.ingtra.net
-  share: /volume1/k8s-csi-nfs
+  share: /volume1/k8s-volume
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 mountOptions:
