--- a/csi-driver-nfs-configs/storageclass.yaml
+++ b/csi-driver-nfs-configs/storageclass.yaml
@@ -9,6 +9,7 @@ provisioner: nfs.csi.k8s.io
 parameters:
   server: synology.dv.ingtra.net
   share: /volume1/k8s-volume
+  subDir: ga/nfs-csi/${pv.metadata.name}
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 mountOptions:
