--- a/seldon-configs/test.yaml
+++ b/seldon-configs/test.yaml
@@ -1,8 +1,9 @@
 apiVersion: mlops.seldon.io/v1alpha1
 kind: Model
 metadata:
-  name: text-gen
+  name: iris
 spec:
-  storageUri: "gs://seldon-models/mlserver/huggingface/text-generation"
+  storageUri: "gs://seldon-models/scv2/samples/mlserver_1.3.5/iris-sklearn"
   requirements:
-    - huggingface
+  - sklearn
+  memory: 100Ki
