--- a/seldon-configs/test.yaml
+++ b/seldon-configs/test.yaml
@@ -1,9 +1,8 @@
 apiVersion: mlops.seldon.io/v1alpha1
 kind: Model
 metadata:
-  name: iris
+  name: text-gen
 spec:
-  storageUri: "gs://seldon-models/scv2/samples/mlserver_1.3.5/iris-sklearn"
+  storageUri: "gs://seldon-models/mlserver/huggingface/text-generation"
   requirements:
-  - sklearn
-  memory: 100Ki
+  - huggingface
