--- a/cert-manager-configs/issuers.yaml
+++ b/cert-manager-configs/issuers.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
@@ -14,6 +15,25 @@ spec:
         name: zerossl-eab-credentials
         key: eab-hmac-key
       keyAlgorithm: HS256
+    solvers:
+      - dns01:
+          cloudflare:
+            email: cookieshake.dev@gmail.com
+            apiTokenSecretRef:
+              name: cloudflare-api-token
+              key: token
+
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt
+spec:
+  acme:
+    email: cookieshake.dev@gmail.com
+    server: https://acme-v02.api.letsencrypt.org/directory
+    privateKeySecretRef:
+      name: letsencrypt-private-key
     solvers:
       - dns01:
           cloudflare:
