--- a/misc/mlserver.yaml
+++ b/misc/mlserver.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       initContainers:
         - name: git-sync
-          image: k8s.gcr.io/git-sync:v4.2.1
+          image: registry.k8s.io/git-sync/git-sync:v4.2.1
           args:
             - --repo=https://github.com/ingtranet/mlserver-repository.git
             - --branch=main
