--- a/misc/mlserver.yaml
+++ b/misc/mlserver.yaml
@@ -28,6 +28,7 @@ spec:
       containers:
         - name: caddy
           image: docker.io/ingtranet/jetson-ml-inference:24.3.1-l4t36.2.0
+          imagePullPolicy: Always
           ports:
             - name: http
               containerPort: 8080
