--- a/misc/mlserver.yaml
+++ b/misc/mlserver.yaml
@@ -32,6 +32,8 @@ spec:
           env:
             - name: HF_HOME
               value: /mnt/huggingface-home
+            - name: HUGGINGFACE_HUB_CACHE
+              value: /mnt/huggingface-home/hub
           ports:
             - name: http
               containerPort: 8080
