--- a/misc/motorcoach.yaml
+++ b/misc/motorcoach.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: motorcoach
-  namespace: motorcoach
+  namespace: nriy
 spec:
   replicas: 1
   selector:
@@ -33,7 +33,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: motorcoach
-  namespace: motorcoach
+  namespace: nriy
 spec:
   selector:
     app.kubernetes.io/name: motorcoach
